--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
 		<div class="wrap-header-mobile">
 			<!-- Logo moblie -->		
 			<div class="logo-mobile">
-				<a href="index.html"><img src="images/icons/logo-01.png" alt="IMG-LOGO"></a>
+				<a href="index.html"><img src="Nalini's Wedding Couture.png" alt="IMG-LOGO"></a>
 			</div>
 
 			<!-- Icon header -->
@@ -193,30 +193,33 @@
 						<li><a href="index.html">Homepage 1</a></li>
 						<li><a href="home-02.html">Homepage 2</a></li>
 						<li><a href="home-03.html">Homepage 3</a></li>
-					</ul>
-					<span class="arrow-main-menu-m">
+		</ul-->
+					<!--span class="arrow-main-menu-m">
 						<i class="fa fa-angle-right" aria-hidden="true"></i>
 					</span-->
-
-				<li>
-					<a href="product.html">Shop</a>
-				</li>
-
-				<li>
-					<a href="shoping-cart.html" class="label1 rs1" data-label1="hot">Features</a>
-				</li>
-
-				<li>
-					<a href="blog.html">Blog</a>
-				</li>
-
-				<li>
+			<li>
 					<a href="about.html">About</a>
 				</li>
 
 				<li>
+					<a href="product.html">Shop</a>
+				</li>
+			<li>
+					<a href="blog.html"  class="label1 rs1" data-label1="hot">Celebrities</a>
+				</li>
+			
+				<li>
 					<a href="contact.html">Contact</a>
 				</li>
+
+
+				<li>
+					<a href="shoping-cart.html">Checkout</a>
+				</li>
+
+				
+				
+
 		</div>
 
 		<!-- Modal Search -->
