--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
 		<div class="wrap-header-mobile">
 			<!-- Logo moblie -->		
 			<div class="logo-mobile">
-				<a href="index.html"><img src="Nalini's Wedding Couture.png" alt="IMG-LOGO"></a>
+				<a href="index.html"><img src="Nalini’s Wedding Couture.png" alt="IMG-LOGO"></a>
 			</div>
 
 			<!-- Icon header -->
