--- a/blog.html
+++ b/blog.html
@@ -187,12 +187,12 @@
 			<ul class="main-menu-m">
 				<li>
 					<a href="index.html">Home</a>
-					<1--ul class="sub-menu-m">
+					<!--ul class="sub-menu-m">
 						<li><a href="index.html">Homepage 1</a></li>
 						<li><a href="home-02.html">Homepage 2</a></li>
 						<li><a href="home-03.html">Homepage 3</a></li>
 					</ul-->
-					!--<span class="arrow-main-menu-m">
+					<!--span class="arrow-main-menu-m">
 						<i class="fa fa-angle-right" aria-hidden="true"></i>
 					</span-->
 				</li>
