--- a/blog-detail.html
+++ b/blog-detail.html
@@ -123,7 +123,7 @@
 		<div class="wrap-header-mobile">
 			<!-- Logo moblie -->		
 			<div class="logo-mobile">
-				<a href="index.html"><img src="images/icons/logo-01.png" alt="IMG-LOGO"></a>
+				<a href="index.html"><img src="Nalini’s Wedding Couture.png" alt="IMG-LOGO"></a>
 			</div>
 
 			<!-- Icon header -->
@@ -183,35 +183,33 @@
 			<ul class="main-menu-m">
 				<li>
 					<a href="index.html">Home</a>
-					<ul class="sub-menu-m">
+					<!--ul class="sub-menu-m">
 						<li><a href="index.html">Homepage 1</a></li>
 						<li><a href="home-02.html">Homepage 2</a></li>
 						<li><a href="home-03.html">Homepage 3</a></li>
-					</ul>
-					<span class="arrow-main-menu-m">
+				</ul-->
+					<!--span class="arrow-main-menu-m">
 						<i class="fa fa-angle-right" aria-hidden="true"></i>
-					</span>
+				</span-->
 				</li>
-
-				<li>
-					<a href="product.html">Shop</a>
-				</li>
-
-				<li>
-					<a href="shoping-cart.html" class="label1 rs1" data-label1="hot">Features</a>
-				</li>
-
-				<li>
-					<a href="blog.html">Blog</a>
-				</li>
-
 				<li>
 					<a href="about.html">About</a>
 				</li>
 
 				<li>
+					<a href="product.html">Shop</a>
+				</li>
+				<li>
+					<a href="blog.html" class="label1 rs1" data-label1="hot">celebrities</a>
+				</li>
+				<li>
 					<a href="contact.html">Contact</a>
 				</li>
+				
+				<li>
+					<a href="shoping-cart.html">checkout</a>
+				</li>
+
 			</ul>
 		</div>
 
