--- a/about.html
+++ b/about.html
@@ -125,7 +125,7 @@
 		<div class="wrap-header-mobile">
 			<!-- Logo moblie -->		
 			<div class="logo-mobile">
-				<a href="index.html"><img src="images/icons/logo-01.png" alt="IMG-LOGO"></a>
+				<a href="index.html"><img src="Nalini’s Wedding Couture.png" alt="IMG-LOGO"></a>
 			</div>
 
 			<!-- Icon header -->
@@ -185,14 +185,17 @@
 			<ul class="main-menu-m">
 				<li>
 					<a href="index.html">Home</a>
-					<ul class="sub-menu-m">
+					<!--ul class="sub-menu-m">
 						<li><a href="index.html">Homepage 1</a></li>
 						<li><a href="home-02.html">Homepage 2</a></li>
 						<li><a href="home-03.html">Homepage 3</a></li>
-					</ul>
-					<span class="arrow-main-menu-m">
+				</ul-->
+					<!--span class="arrow-main-menu-m">
 						<i class="fa fa-angle-right" aria-hidden="true"></i>
-					</span>
+				</span-->
+				</li>
+				<li>
+					<a href="about.html">About</a>
 				</li>
 
 				<li>
@@ -200,19 +203,13 @@
 				</li>
 
 				<li>
-					<a href="shoping-cart.html" class="label1 rs1" data-label1="hot">Features</a>
+					<a href="blog.html" class="label1 rs1" data-label1="hot">celebrities</a>
 				</li>
-
-				<li>
-					<a href="blog.html">Blog</a>
-				</li>
-
-				<li>
-					<a href="about.html">About</a>
-				</li>
-
 				<li>
 					<a href="contact.html">Contact</a>
+				</li>
+				<li>
+					<a href="shoping-cart.html" >checkout</a>
 				</li>
 			</ul>
 		</div>
@@ -344,11 +341,11 @@
 						<p class="stext-113 cl6 p-b-26">
 							To create the most exclusive and appealing designs in contemporary fashion clothing ensuring absolute focus on quality, creativity, cost and time, using the best of resources such as skill, creativity, supporting infrastructure and globally respected best business practices.To be among the most foreknown fashion stylists of India and expand Nalini's Wedding Couture brand to international geographies with its creativity, style, comfort and quality.
 
-Come home to the house of superbly crafted, scintillatingly exotic, delicately divine and sensually supernal attires, Newyork. With a repertoire of current and traditional styles, blended Indo-Western collections and uniquely customized creations, Nalini's couture Label is truly your one stop shop for the most  exclusive Wedding Collection in contemporary fashion in NY.
+Come home to the house of superbly crafted, scintillatingly exotic, delicately divine and sensually supernal attires, Newyork. With a repertoire of current and traditional styles, blended Indo-Western collections and uniquely customized creations, Nalini's couture Label is truly your one stop shop for the most  exclusive Wedding Collection in contemporary fashion in Hyderabad.
 						</p>
 
 						<p class="stext-113 cl6 p-b-26">
-							Any questions? Let us know in store at 8th floor, 379 Hudson St, New York, NY 10018 or call us on (+1) 96 716 6879
+							Any questions? Let us know in store at Jubileehills, Hyderabad 500033 or call us on (+91) 95028 01684
 						</p>
 					</div>
 				</div>
